# photomanager

./: .env  .env.sample  .rustfmt.toml  Cargo.toml  Dockerfile  Dockerfile.multistage  README.md  justfile  rust-toolchain.toml
.github/workflows/: main.yml
.k8s/: busyboxdebug.yaml
.k8s/base/: deployment.yaml  pv.yaml  service.yaml
.k8s/overlays/base/: deployment.yaml
.k8s/overlays/prod/: kustomization.yaml
src/: file_management.rs  fsops.rs  google_photos_upload.rs  graphql_server.rs  http_server.rs  image.rs  lib.rs  main.rs  model.rs  reqwops.rs  reviewscore.rs
src/google_photos_upload/: album.rs  google_photos_client.rs  mod.rs
src/graphql_server/: mod.rs
src/routes/: mod.rs
tests/: model.rs
