[package]
name = "photomanager"
version = "0.1.0"
edition = "2021"
authors = ["avtnl <alexander@structura.ws>"]

[dependencies]
async-graphql = "5.0.7"
async-graphql-axum = "5.0.7"
axum = {version="0.6.17",features= ["macros"]}
globwalk = "0.8.1"
hyper = "0.14.26"
serde = {version="1.0.160", features=["derive"]}
shellexpand = "3.1.0"
tokio = { version = "1.28.0", features = ["full"] }
tower-http = { version = "0.4.0", features=["cors"] }
