[package]
name = "photomanager"
version = "0.1.0"
edition = "2021"
authors = ["avtnl <alexander@structura.ws>"]

[lib]
name = "photomanagerlib"
path = "src/lib.rs"

[dependencies]
anyhow = {version="1.0.71", features=["backtrace"]}
async-graphql = "5.0.7"
async-graphql-axum = "5.0.7"
axum = {version="0.6.17",features= ["macros"]}
dotenv = "0.15.0"
globwalk = "0.8.1"
hyper = "0.14.26"
serde = {version="1.0.160", features=["derive"]}
serde_json = "1.0.104"
shellexpand = "3.1.0"
tokio = { version = "1.28.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs", "cors","trace"] }

[profile.release]
# debug = true      # Enable debug symbols
# opt-level = 3     # Optimize for speed
# opt-level = 'z'   # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
