[package]
name = "photomanager"
version = "0.1.0"
edition = "2021"
authors = ["avtnl <alexander@structura.ws>"]

[lib]
name = "photomanagerlib"
path = "src/lib.rs"

[dependencies]
anyhow = {version="1.0.71", features=["backtrace"]}
async-graphql = "5.0.7"
async-graphql-axum = "6.0.10"
axum = {version="0.6.17",features= ["macros"]}
console-subscriber = {version= "0.1.10", features =[ "parking_lot"]}
dotenvy = "0.15.7"
globwalk = "0.8.1"
hyper = "0.14.26"
oauth2 = "4.4.1"
reqwest = {version= "0.11.18", features = ["blocking", "json"] }
serde = {version="1.0.177", features=["derive"]}
serde_json = "1.0.104"
shellexpand = "3.1.0"
tokio = { version = "1.28.0", features = ["full", "tracing"] }
tower-http = { version = "0.4.3", features = ["fs", "cors","trace"] }
tracing = "0.1.37"

[profile.release]
# debug = true      # Enable debug symbols
# opt-level = 3     # Optimize for speed
# opt-level = 'z'   # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dev-dependencies]
rand = "0.8.5"
